styles/base.css
* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
    color: var(--black);
}

:root {
    --primary: #1A535C;
    --secondary: #4ECDC4;
    --accent1: #EBD2B4;
    --accent2: #5E4955;
    --white: #F7FFF7;
    --black: black;
}

body.dark {
    --primary: #1a1a1a;
    --secondary: #4f4f4f;
    --accent1: #cabdff;
    --accent2: #fec52a;
    --white: #343434;
    --black: white;
}

body {
    font-family: 'Poppins', sans-serif;
    background-color: var(--white);
}

main {
    max-width: 960px;
    margin: 0 auto;
    padding: 1rem;
    display: grid;
    gap: 1rem;
    justify-content: center;
}

    main > * {
        grid-column: 1/2;
    }

header {
    background-color: var(--primary);
    color: var(--white);
    display: grid;
    grid-template-columns: auto auto;
    justify-content: center;
    align-items: center;
    gap: 2rem;
    padding: 1rem;
}

    header > h1,
    footer * {
        color: white;
    }

img {
    box-shadow: 0px 0px 20px black;
}

h1 {
    display: inline-block;
}

nav {
    background-color: var(--secondary);
    display: none;
}

    nav.open {
        display: block;
    }

    nav > ul {
        list-style: none;
    }

    nav a {
        color: var(--black) !important;
        display: block;
        text-align: center;
        text-decoration: inherit;
        padding: 1rem;
        font-size: 1.25rem;
    }

        nav a:hover {
            background-color: var(--accent1);
            text-decoration: underline;
        }

        nav a.active {
            background-color: var(--accent2);
            color: var(--white) !important;
        }

body.dark nav a:hover {
    color: var(--white) !important;
}

.card {
    border-radius: 0.5rem;
    overflow: hidden;
    box-shadow: 0px 0px 20px black;
}

    .card ul {
        list-style: none;
        margin: 1rem;
    }

    .card h3 {
        text-align: center;
        background: var(--primary);
        color: white;
        padding: 0.5rem;
    }

footer {
    background-color: var(--primary);
    color: white;
    text-align: center;
    padding: 0.5rem;
}

.text-center {
    text-align: center;
}

p {
    margin: 1rem;
}

a[href] {
    color: blue;
}

body.dark a[href] {
    color: var(--accent1);
}

#menu {
    position: absolute;
    background-color: var(--secondary);
    width: 4rem;
    height: 4rem;
    font-size: 2rem;
}

    #menu::before {
        content: "☰";
    }

    #menu.open::before {
        content: "Χ";
    }


#toggleDarkModeButton {
    position: absolute;
    right: 1rem;
    width: 6rem;
    height: 2rem;
    color: black;
}

#hero {
    position: relative;
}

    #hero img {
        width: 100%;
        box-shadow: none;
    }

#heroLabel {
    position: absolute;
    left: 2rem;
    top: 2rem;
    padding: 0.5rem 1rem;
    border: 1px solid #ffffff77;
    background-color: #ffffff33;
    font-family: 'Brush Script MT';
    font-size: 2.5rem;
    white-space: nowrap;
}

#gmaps {
    grid-column: 1/3;
}

